Project create added

--- a/project-create.html
+++ b/project-create.html
@@ -218,7 +218,7 @@
                     <div class="row" bis_skin_checked="1">
                         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12" bis_skin_checked="1">
                             <div class="page-header" id="top" bis_skin_checked="1">
-                                <h2 class="pageheader-title">User Create</h2>
+                                <h2 class="pageheader-title">Project Create</h2>
                             </div>
                         </div>
                     </div>
@@ -232,59 +232,41 @@
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6" bis_skin_checked="1">
                             <form>
                                 <div class="row">
-                                    <div class="form-group col-6" bis_skin_checked="1">
-                                        <label for="firstname" class="col-form-label">First Name</label>
-                                        <input id="firstname" type="text" class="form-control" placeholder="first name">
-                                    </div>
-                                    <div class="form-group col-6" bis_skin_checked="1">
-                                        <label for="lastname" class="col-form-label">Last Name</label>
-                                        <input id="lastname" type="text" class="form-control" placeholder="last name">
+                                    <div class="form-group col-12" bis_skin_checked="1">
+                                        <label for="projectname" class="col-form-label">Project Name</label>
+                                        <input id="projectname" type="text" class="form-control" placeholder="project name">
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="form-group col-6" bis_skin_checked="1">
-                                        <label for="email" class="col-form-label">Email Address</label>
-                                        <input id="email" type="text" class="form-control" placeholder="email address">
-                                    </div>
-                                    <div class="form-group col-6" bis_skin_checked="1">
-                                        <label for="phone_number" class="col-form-label">Phone number</label>
-                                        <input id="phone_number" type="text" class="form-control"
-                                               placeholder="phone number">
+                                    <div class="form-group col-12" bis_skin_checked="1">
+                                        <label for="projectcode" class="col-form-label">Project Code</label>
+                                        <input id="projectcode" type="text" class="form-control" placeholder="project code">
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="form-group col-6" bis_skin_checked="1">
-                                        <label for="password" class="col-form-label">Password</label>
-                                        <input id="password" type="text" class="form-control" placeholder="password">
-                                    </div>
-                                    <div class="form-group col-6" bis_skin_checked="1">
-                                        <label for="confirm_password" class="col-form-label">Password</label>
-                                        <input id="confirm_password" type="text" class="form-control"
-                                               placeholder="confirm your password">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="form-group col-6" bis_skin_checked="1">
-                                        <label>Gender</label>
-                                        <br>
-                                        <label class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" name="male" class="custom-control-input"
-                                                   value="male"><span class="custom-control-label">Male</span>
-                                        </label>
-                                        <label class="custom-control custom-radio custom-control-inline">
-                                            <input type="radio" name="female" class="custom-control-input"
-                                                   value="female"><span class="custom-control-label">Female</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-group col-6" bis_skin_checked="1">
-                                        <label>Choose a Role</label>
+                                    <div class="form-group col-12" bis_skin_checked="1">
+                                        <label>Assigned Manager</label>
                                         <select name="roleId" id="roleDropdown" class="custom-select"
                                                 required="required">
                                             <option value="none" selected disabled>Select</option>
-                                            <option value="admin">Admin</option>
-                                            <option value="manager">Manager</option>
-                                            <option value="employee">Employee</option>
+                                            <option value="ozzy">Ozzy</option>
                                         </select>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="form-group col-6" bis_skin_checked="1">
+                                        <label>Project Start Date</label>
+                                        <input type="date" class="form-control">
+                                    </div>
+                                    <div class="form-group col-6" bis_skin_checked="1">
+                                        <label>Project End Date</label>
+                                        <input type="date" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="form-group col-12" bis_skin_checked="1">
+                                        <label>Project Detail</label>
+                                        <textarea class="form-control" placeholder="write your project details..."></textarea>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -304,43 +286,28 @@
 
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12" bis_skin_checked="1">
                         <div class="page-header" id="bottom" bis_skin_checked="1">
-                            <h2 class="pageheader-title">User List</h2>
+                            <h2 class="pageheader-title">Project List</h2>
                         </div>
                     </div>
 
                     <table class="table table-striped">
                         <thead>
                         <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Email(username)</th>
-                            <th scope="col">Gender</th>
-                            <th scope="col">Phone</th>
-                            <th scope="col">Role</th>
+                            <th scope="col">Project Code</th>
+                            <th scope="col">Project Name</th>
+                            <th scope="col">Start - End Date</th>
+                            <th scope="col">Manager</th>
+                            <th scope="col">Status</th>
                             <th scope="col">Action</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td>Craig Jark</td>
-                            <td>Craig@cydeo.com</td>
-                            <td>Male</td>
-                            <td>9086451233</td>
-                            <td>Employee</td>
-                            <td>
-                                <a href="#">
-                                    <button class="btn btn-warning btn-sm">Update</button>
-                                </a>
-                                <a href="#">
-                                    <button class="btn btn-danger btn-sm">Delete</button>
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
+                            <td>PRJ001</td>
+                            <td>Human Resource CRM</td>
+                            <td>03/07/2023 - 03/18/2024</td>
                             <td>Delissa Norre</td>
-                            <td>Delissa@cydeo.com</td>
-                            <td>Female</td>
-                            <td>2435546576</td>
-                            <td>Manager</td>
+                            <td>Open</td>
                             <td>
                                 <a href="#">
                                     <button class="btn btn-warning btn-sm">Update</button>
@@ -348,50 +315,44 @@
                                 <a href="#">
                                     <button class="btn btn-danger btn-sm">Delete</button>
                                 </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>John Kesy</td>
-                            <td>admin@cydeo.com</td>
-                            <td>Male</td>
-                            <td>7456343123</td>
-                            <td>Admin</td>
-                            <td>
-                                <a href="#">
-                                    <button class="btn btn-warning btn-sm">Update</button>
-                                </a>
-                                <a href="#">
-                                    <button class="btn btn-danger btn-sm">Delete</button>
+                                <a href="">
+                                    <button class="btn btn-info btn-sm">Complete</button>
                                 </a>
                             </td>
                         </tr>
                         <tr>
+                            <td>PRJ002</td>
+                            <td>Infra Upgrade</td>
+                            <td>03/08/2024 - 04/18/2024</td>
                             <td>Mike Smith</td>
-                            <td>smith@cydeo.com</td>
-                            <td>Male</td>
-                            <td>91874132531</td>
-                            <td>Manager</td>
+                            <td>In Progress</td>
                             <td>
                                 <a href="#">
                                     <button class="btn btn-warning btn-sm">Update</button>
                                 </a>
                                 <a href="#">
                                     <button class="btn btn-danger btn-sm">Delete</button>
+                                </a>
+                                <a href="">
+                                    <button class="btn btn-info btn-sm">Complete</button>
                                 </a>
                             </td>
                         </tr>
                         <tr>
-                            <td>Shaun Hayns</td>
-                            <td>shaun@cydeo.com</td>
-                            <td>Male</td>
-                            <td>46512341223</td>
-                            <td>Employee</td>
+                            <td>PRJ003</td>
+                            <td>Shipment Tracking System</td>
+                            <td>04/10/2024 - 04/18/2024</td>
+                            <td>Mike Tyson</td>
+                            <td>Complete</td>
                             <td>
                                 <a href="#">
                                     <button class="btn btn-warning btn-sm">Update</button>
                                 </a>
                                 <a href="#">
                                     <button class="btn btn-danger btn-sm">Delete</button>
+                                </a>
+                                <a href="">
+                                    <button class="btn btn-info btn-sm">Complete</button>
                                 </a>
                             </td>
                         </tr>
