--- a/project-status.html
+++ b/project-status.html
@@ -292,6 +292,9 @@
                     <!-- ============================================================== -->
                     <!-- end table  -->
                     <!-- ============================================================== -->
+                    <footer class="page-footer font-small blue fixed-bottom">
+                        <div class="footer-copyright text-center py-3">@ 2024 Cydeo - All Rights Reserved</div>
+                    </footer>
                 </div>
             </div>
         </div>
